--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 APScheduler==3.10.4
-aiogram==3.5.0
+aiogram==3.15.0
 colorlog==6.8.2
 pytz==2024.1
 typing~=3.7.4.3
-aiohttp~=3.9.1
+aiohttp==3.10.11
 cachetools==5.3.3
 colorama~=0.4.5
 aiofiles~=23.2.1
